# BioSim_G05_Kare_Anders

./: README.md  requirements.txt  setup.cfg
docs/: biosim.rst  conf.py  index.rst
src/biosim/: Island.py  __init__.py  animals.py  board.py  cell_topography.py  island.py  simulation.py
tests/: test_animals.py  test_biosim_interface.py  test_cell_topography.py  test_island.py
