[metadata]
name = biosim
description = A population dynamics simulation written in Python
long_description = file: README.rst
author = Anders Karlsen & Kare Johnsen
author_email = anderska@nmbu.no & kajohnse@nmbu.no

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    matplotlib
    numpy
    pandas

[options.packages.find]
where=src